--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p>1 hours ago</p>
         </div>
         <div class="job-location">
-          <h4>Sohan Singh</h4>
+          <h4>Abhisek Swain</h4>
           <p>London,UK</p>
         </div>
         <div class="job-description">
@@ -53,7 +53,7 @@
           <p>2 hours ago</p>
         </div>
         <div class="job-location">
-          <h4>Hitesh Kumar Maharana</h4>
+          <h4>Ayashkant Pradhan</h4>
           <p>NewYork,USA</p>
         </div>
         <div class="job-description">
